syntax = "proto3";
package MST;


enum OuterOpcode_Lobby
{
	None = 0;
	C2L_BindMailBox_Req = 10302;
	L2C_BindMailBox_Res = 10303;
	C2L_BindPhone_Req = 10304;
	L2C_BindPhone_Res = 10305;
	C2L_GoldRankDay_Req = 10306;
	L2C_GoldRankDay_Res = 10307;
	C2L_BetRank_Req = 10308;
	L2C_BetRank_Res = 10309;
	C2L_WinDayRank_Req = 10310;
	L2C_WinDayRank_Res = 10311;
	C2L_WinWeekRank_Req = 10312;
	L2C_WinWeekRank_Res = 10313;
	C2L_WinMonthRank_Req = 10314;
	L2C_WinMonthRank_Res = 10315;
	C2L_GetGameList_Req = 10316;
	L2C_GetGameList_Res = 10317;
	L2C_ChipsChange_Mes = 10318;
	C2L_Deposit_Req = 10319;
	L2C_Deposit_Res = 10320;
	C2L_Withdraw_Req = 10321;
	L2C_Withdraw_Res = 10322;
	C2L_GetWithdrawReocrds_Req = 10323;
	L2C_GetWithdrawRecords_Res = 10324;
	C2L_GetDepositLimit_Req = 10325;
	L2C_GetDepositLimit_Res = 10326;
	C2L_GetWithdrawLimit_Req = 10327;
	L2C_GetWithdrawLimit_Res = 10328;
	C2L_GetStoreList_Req = 10329;
	L2C_GetStoreList_Res = 10330;
	C2L_GetBankList_Req = 10331;
	L2C_GetBankList_Res = 10332;
	C2L_BindBankCard_Req = 10333;
	L2C_BindBankCard_Res = 10334;
	C2L_GetBankCardInfo_Req = 10335;
	L2C_GetBankCardInfo_Res = 10336;
	C2S_MinigameInfo = 10337;
	S2C_MinigameInfo = 10338;
	C2S_MinigameLottery = 10339;
	S2C_MinigameLottery = 10340;
	C2S_GetSignedInfo = 10341;
	S2C_GetSignedInfo = 10342;
	C2S_Signed = 10343;
	S2C_Signed = 10344;
	C2S_Register = 10345;
	S2C_Register = 10346;
	C2S_ResetPassword = 10347;
	S2C_ResetPassword = 10348;
	C2S_GetCheckCode = 10349;
	S2C_GetCheckCode = 10350;
	C2S_BindPhone = 10351;
	S2C_BindPhone = 10352;
	C2S_BindEmail = 10353;
	S2C_BindEmail = 10354;
	C2S_GetRegisterRewardConfig = 10355;
	S2C_GetRegisterRewordConfig = 10356;
	C2S_PromotionInfo = 10357;
	S2C_PromotionInfo = 10358;
	C2S_ModifyAvartar = 10359;
	S2C_ModifyAvartar = 10360;
	C2S_GetDepositList = 10361;
	S2C_GetDepositList = 10362;
	C2S_GetMissionList = 10363;
	S2C_GetMissionList = 10364;
	C2S_MissionClaim = 10365;
	S2C_MissionClaim = 10366;
	S2C_MessageNotify = 10367;
}
